parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 21    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 30    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 34    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 36    command -> MOVE NUMBER NUMBER NUMBER
Rule 37    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 38    command -> SCALE NUMBER NUMBER NUMBER
Rule 39    command -> ROTATE XYZ NUMBER SYMBOL
Rule 40    command -> ROTATE XYZ NUMBER
Rule 41    command -> FRAMES NUMBER
Rule 42    command -> BASENAME TEXT
Rule 43    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 44    command -> SET SYMBOL NUMBER
Rule 45    command -> SET_KNOBS NUMBER
Rule 46    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 47    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 48    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 49    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 50    command -> SHADING SHADING_TYPE
Rule 51    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 52    command -> GENERATE_RAYFILES
Rule 53    command -> MESH TEXT TEXT
Rule 54    command -> MESH CO TEXT TEXT
Rule 55    command -> MESH SYMBOL CO TEXT TEXT
Rule 56    command -> MESH CO TEXT TEXT SYMBOL
Rule 57    command -> MESH SYMBOL CO TEXT TEXT SYMBOL
Rule 58    command -> SAVE_KNOBS SYMBOL
Rule 59    command -> SAVE_COORDS SYMBOL
Rule 60    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 61    command -> FOCAL NUMBER
Rule 62    command -> WEB
Rule 63    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 46
BASENAME             : 42
BOX                  : 23 24 25 26
CAMERA               : 51
CO                   : 54 55 56 57
COMMENT              : 3
CONSTANTS            : 47 48
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 61
FRAMES               : 41
GENERATE_RAYFILES    : 52
ID                   : 5
INT                  : 
LIGHT                : 49
LINE                 : 27 28 29 30 31 32 33 34
MESH                 : 53 54 55 56 57
MOVE                 : 35 36
POP                  : 9
PUSH                 : 10
ROTATE               : 39 40
SAVE                 : 13
SAVE_COORDS          : 59
SAVE_KNOBS           : 58
SCALE                : 37 38
SCREEN               : 11 12
SET                  : 44
SET_KNOBS            : 45
SHADING              : 50
SHADING_TYPE         : 50
SPHERE               : 15 16 17 18
STRING               : 7
TEXTURE              : 63
TORUS                : 19 20 21 22
TWEEN                : 60
VARY                 : 43
WEB                  : 62
XYZ                  : 4 39 40
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 27 27 27 27 27 27 28 28 28 28 28 28 29 29 29 29 29 29 30 30 30 30 30 30 31 31 31 31 31 31 32 32 32 32 32 32 33 33 33 33 33 33 34 34 34 34 34 34 35 35 35 36 36 36 37 37 37 38 38 38 39 40 41 43 43 43 43 44 45 46 46 46 47 47 47 47 47 47 47 47 47 48 48 48 48 48 48 48 48 48 48 48 48 49 49 49 49 49 49 51 51 51 51 51 51 60 60 61 63 63 63 63 63 63 63 63 63 63 63 63
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 31 32 32 33 33 34 34 34 35 37 39 43 44 47 48 49 55 56 57 57 58 59 60 60 63
TEXT                 : 13 13 42 53 53 54 54 55 55 56 56 57 57
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (30) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (34) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (36) command -> . MOVE NUMBER NUMBER NUMBER
    (37) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . SCALE NUMBER NUMBER NUMBER
    (39) command -> . ROTATE XYZ NUMBER SYMBOL
    (40) command -> . ROTATE XYZ NUMBER
    (41) command -> . FRAMES NUMBER
    (42) command -> . BASENAME TEXT
    (43) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (44) command -> . SET SYMBOL NUMBER
    (45) command -> . SET_KNOBS NUMBER
    (46) command -> . AMBIENT NUMBER NUMBER NUMBER
    (47) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (48) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (49) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (50) command -> . SHADING SHADING_TYPE
    (51) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (52) command -> . GENERATE_RAYFILES
    (53) command -> . MESH TEXT TEXT
    (54) command -> . MESH CO TEXT TEXT
    (55) command -> . MESH SYMBOL CO TEXT TEXT
    (56) command -> . MESH CO TEXT TEXT SYMBOL
    (57) command -> . MESH SYMBOL CO TEXT TEXT SYMBOL
    (58) command -> . SAVE_KNOBS SYMBOL
    (59) command -> . SAVE_COORDS SYMBOL
    (60) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (61) command -> . FOCAL NUMBER
    (62) command -> . WEB
    (63) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 12
    POP             shift and go to state 14
    PUSH            shift and go to state 17
    SCREEN          shift and go to state 22
    SAVE            shift and go to state 32
    DISPLAY         shift and go to state 10
    SPHERE          shift and go to state 25
    TORUS           shift and go to state 19
    BOX             shift and go to state 1
    LINE            shift and go to state 9
    MOVE            shift and go to state 4
    SCALE           shift and go to state 3
    ROTATE          shift and go to state 28
    FRAMES          shift and go to state 8
    BASENAME        shift and go to state 11
    VARY            shift and go to state 5
    SET             shift and go to state 13
    SET_KNOBS       shift and go to state 29
    AMBIENT         shift and go to state 31
    CONSTANTS       shift and go to state 33
    LIGHT           shift and go to state 16
    SHADING         shift and go to state 27
    CAMERA          shift and go to state 15
    GENERATE_RAYFILES shift and go to state 2
    MESH            shift and go to state 26
    SAVE_KNOBS      shift and go to state 23
    SAVE_COORDS     shift and go to state 7
    TWEEN           shift and go to state 24
    FOCAL           shift and go to state 20
    WEB             shift and go to state 21
    TEXTURE         shift and go to state 6

    input                          shift and go to state 18
    command                        shift and go to state 30

state 1

    (23) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 34
    XYZ             shift and go to state 38
    ID              shift and go to state 37

    SYMBOL                         shift and go to state 35
    NUMBER                         shift and go to state 36

state 2

    (52) command -> GENERATE_RAYFILES .

    COMMENT         reduce using rule 52 (command -> GENERATE_RAYFILES .)
    POP             reduce using rule 52 (command -> GENERATE_RAYFILES .)
    PUSH            reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SCREEN          reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SAVE            reduce using rule 52 (command -> GENERATE_RAYFILES .)
    DISPLAY         reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SPHERE          reduce using rule 52 (command -> GENERATE_RAYFILES .)
    TORUS           reduce using rule 52 (command -> GENERATE_RAYFILES .)
    BOX             reduce using rule 52 (command -> GENERATE_RAYFILES .)
    LINE            reduce using rule 52 (command -> GENERATE_RAYFILES .)
    MOVE            reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SCALE           reduce using rule 52 (command -> GENERATE_RAYFILES .)
    ROTATE          reduce using rule 52 (command -> GENERATE_RAYFILES .)
    FRAMES          reduce using rule 52 (command -> GENERATE_RAYFILES .)
    BASENAME        reduce using rule 52 (command -> GENERATE_RAYFILES .)
    VARY            reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SET             reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SET_KNOBS       reduce using rule 52 (command -> GENERATE_RAYFILES .)
    AMBIENT         reduce using rule 52 (command -> GENERATE_RAYFILES .)
    CONSTANTS       reduce using rule 52 (command -> GENERATE_RAYFILES .)
    LIGHT           reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SHADING         reduce using rule 52 (command -> GENERATE_RAYFILES .)
    CAMERA          reduce using rule 52 (command -> GENERATE_RAYFILES .)
    GENERATE_RAYFILES reduce using rule 52 (command -> GENERATE_RAYFILES .)
    MESH            reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SAVE_KNOBS      reduce using rule 52 (command -> GENERATE_RAYFILES .)
    SAVE_COORDS     reduce using rule 52 (command -> GENERATE_RAYFILES .)
    TWEEN           reduce using rule 52 (command -> GENERATE_RAYFILES .)
    FOCAL           reduce using rule 52 (command -> GENERATE_RAYFILES .)
    WEB             reduce using rule 52 (command -> GENERATE_RAYFILES .)
    TEXTURE         reduce using rule 52 (command -> GENERATE_RAYFILES .)
    $end            reduce using rule 52 (command -> GENERATE_RAYFILES .)


state 3

    (37) command -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (38) command -> SCALE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 34

    NUMBER                         shift and go to state 39

state 4

    (35) command -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (36) command -> MOVE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 34

    NUMBER                         shift and go to state 40

state 5

    (43) command -> VARY . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 38
    ID              shift and go to state 37

    SYMBOL                         shift and go to state 41

state 6

    (63) command -> TEXTURE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 38
    ID              shift and go to state 37

    SYMBOL                         shift and go to state 42

state 7

    (59) command -> SAVE_COORDS . SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID
